docs/v7.1.2/classes/E4.md
---
layout: page
title: E4 Période
titleEn: E4 Period - Période
permalink: /v7.1.2/classes/E4
sidebar: v712
group: classes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Sous-classe de</strong></p></td>
<td class="en">
<p>E2 Temporal Entity</p>
<p>E92 Spacetime Volume</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E2_Entité_temporelle</code> </p>
<p><code class="language-plaintext highlighter-rouge">E92_Volume_spatio-temporel</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Super-classe de</strong></p></td>
<td class="en">
<p>E5 Event</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E5_Évènement</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This class comprises sets of coherent phenomena or cultural manifestations occurring in time and space.</p>
<p>It is the social or physical coherence of these phenomena that identify an instance of E4 Period and not the associated spatiotemporal extent. This extent is only the “ground” or space in an abstract physical sense that the actual process of growth, spread and retreat has covered. Consequently, different periods can overlap and cœxist in time and space, such as when a nomadic culture exists in the same area and time as a sedentary culture. This also means that overlapping land use rights, common among first nations, amounts to overlapping periods.</p>
<p>Often, this class is used to describe prehistoric or historic periods such as the “Neolithic Period”, the “Ming Dynasty” or the “McCarthy Era”, but also geopolitical units and activities of settlements are regarded as special cases of E4 Period. However, there are no assumptions about the scale of the associated phenomena. In particular all events are seen as synthetic processes consisting of coherent phenomena. Therefore, E4 Period is a superclass of E5 Event. For example, a modern clinical birth, an instance of E67 Birth, can be seen as both a single event, i.e., an instance of E5 Event, and as an extended period, i.e., an instance of E4 Period, that consists of multiple physical processes and complementary activities performed by multiple instances of E39 Actor.</p>
<p>As the actual extent of an instance of E4 Period in spacetime we regard the trajectories of the participating physical things during their participation in an instance of E4 Period. This includes the open spaces via which these things have interacted and the spaces by which they had the potential to interact during that period or event in the way defined by the type of the respective period or event. Examples include the air in a meeting room transferring the voices of the participants. Since these phenomena are fuzzy, we assume the spatiotemporal extent to be contiguous, except for cases of phenomena spreading out over islands or other separated areas, including geopolitical units distributed over disconnected areas such as islands or colonies.</p>
<p>Whether the trajectories necessary for participants to travel between these areas are regarded as part of the spatiotemporal extent or not has to be decided in each case based on a concrete analysis, taking use of the sea for other purposes than travel, such as fishing, into consideration. One may also argue that the activities to govern disconnected areas imply travelling through spaces connecting them and that these areas hence are spatially connected in a way, but it appears counterintuitive to consider for instance travel routes in international waters as extensions of geopolitical units.</p>
<p>Consequently, an instance of E4 Period may occupy a number of disjoint spacetime volumes, however there must not be a discontinuity in the time-span covered by these spacetime volumes. This means that an instance of E4 Period must be contiguous in time. If it has ended in all areas, it has ended as a whole. However, it may end in one area before another, such as in the Polynesian migration, and it continues as long as it is ongoing in at least one area.</p>
<p>We model E4 Period as a subclass of E2 Temporal Entity and of E92 Spacetime Volume. The latter is intended as a phenomenal spacetime volume as defined in CIDOC CRMgeo (Doerr & Hiebel, 2013). By virtue of this multiple inheritance, we can discuss the physical extent of an instance of E4 Period without representing each instance of it together with an instance of its associated spacetime volume. This model combines two quite different kinds of substance: an instance of E4 Period is a phenomenon while an instance of E92 Spacetime Volume is an aggregation of points in spacetime. However, the real spatiotemporal extent of an instance of E4 Period is regarded to be unique to it due to all its details and fuzziness; its identity and existence depends uniquely on the identity of the instance of E4 Period. Therefore, this multiple inheritance is unambiguous and effective and furthermore corresponds to the intuitions of natural language.</p>
<p>Typical use of this class in cultural heritage documentation is for documenting cultural and artistic periods. There are two different conceptualisations of ‘artistic style’, defined either by physical features or by historical context. For example, “Impressionism” can be viewed as a period in the European sphere of influence lasting from approximately 1870 to 1905 during which paintings with particular characteristics were produced by a group of artists that included (among others) Monet, Renoir, Pissarro, Sisley and Degas. Alternatively, it can be regarded as a style applicable to all paintings sharing the characteristics of the works produced by the Impressionist painters, regardless of historical context. The first interpretation is an instance of E4 Period, and the second defines morphological object types that fall under E55 Type.</p>
<p>A geopolitical unit as a specific case of an instance of E4 Period is the set of activities and phenomena related to the claim of power, the consequences of belonging to a jurisdictional area and an administrative system that establishes a geopolitical unit. Examples from the modern period are countries or administrative areas of countries such as districts whose actions and structures define activities and phenomena in the area that they intend to govern. The borders of geopolitical units are often defined in contracts or treaties although they may deviate from the actual practice. The spatiotemporal properties of Geopolitical units can be modelled through the properties inherited from E92 Spacetime Volume.</p>
<p>Another specific case of an instance of E4 Period is the actual extent of the set of activities and phenomena as evidenced by their physical traces that define a settlement, such as the populated period of Nineveh. </p>
</td>
<td>
<p>Cette classe comprend des ensembles de phénomènes cohérents ou de manifestations culturelles se produisant dans l’espace et dans le temps. </p>
<p>C’est la cohérence sociale ou physique de [n.d.t. cet ensemble de] phénomènes qui établit l’identité d’une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code>, et non son étendue spatio-temporelle. Cette dernière n’est que le « terreau » ou l’espace dans lequel, au sens physique abstrait, le processus de croissance, de déploiement ou de retrait [n.d.t. du phénomène qu’encapsule la <code class="language-plaintext highlighter-rouge">E4_Période</code>] a lieu.  Plusieurs périodes peuvent donc se chevaucher et cœxister dans le temps et dans l’espace, par exemple lorsqu’une culture nomade existe dans le même espace et en même temps qu’une culture sédentaire. Cela implique que les droits d’utilisation relatifs à des terres qui se chevauchent – une situation fréquente chez les Premières Nations – équivalent à des périodes se chevauchant elles aussi. </p>
<p>Cette classe est fréquemment utilisée pour décrire des périodes préhistoriques ou historiques comme la « période néolithique », la « dynastie Ming » ou « l’ère McCarthy », mais aussi pour des éléments géopolitiques et des activités d’occupation considérés comme des cas spéciaux de <code class="language-plaintext highlighter-rouge">E4_Période</code>. </p>
<p>[n.d.t. L’utilisation de cette classe pour décrire des phénomènes précis] n’implique pas de postulats quant à l’échelle des phénomènes en question : tous les évènements sont considérés comme des processus synthétiques composés de phénomènes cohérents [n.d.t. c.-à-d. des phénomènes qui peuvent raisonnablement être perçus comme dotés d’une complétude interne]. Ainsi, <code class="language-plaintext highlighter-rouge">E4_Période</code> est une super-classe de <code class="language-plaintext highlighter-rouge">E5_Évènement</code>. Par exemple, une naissance ayant eu lieu dans un milieu clinique moderne – une instance de <code class="language-plaintext highlighter-rouge">E67_Naissance</code> – peut être considérée à la fois comme un évènement unique (c.-à-d. une instance de <code class="language-plaintext highlighter-rouge">E5_Évènement</code>) et comme une période étendue (c.-à-d. une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code>) qui consiste en de multiples processus physiques et activités complémentaires accomplies par diverses instances de <code class="language-plaintext highlighter-rouge">E39_Actant</code>.</p>
<p>L’étendue spatio-temporelle d’une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code> dans le CIDOC CRM correspond aux trajectoires des choses physiques lorsqu’elles participent à une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code>. Cela inclut les espaces ouverts par l’intermédiaire desquels les choses ont ou auraient pu interagir au cours de la période ou de l’évènement, et ce, d’une manière cohérente avec [n.d.t. les principes qui définissent] le type de cette période ou de cet évènement. Un exemple de tels espaces serait l’air présent dans une salle de réunion et qui transmet les voix des participants. </p>
<p>Ces phénomènes étant de nature floue, leur étendue spatio-temporelle est [n.d.t. de facto] considérée comme continue, à l’exception de phénomènes se déployant sur plusieurs îles ou territoires distincts, ce qui inclut des éléments géopolitiques distribués sur des territoires distincts tels que des îles ou des colonies. Le fait de considérer les trajectoires nécessaires au voyage des participants entre de tels territoires comme des étendues spatio-temporelles en elles-mêmes doit être déterminé au cas par cas en se fondant sur une analyse concrète qui prend en compte, notamment, l’usage de la mer à d’autres fins que la pêche. L’idée que les activités de gouvernance de territoires atomisés impliquent aussi des déplacements dans les espaces qui les lient de manière que ces territoires demeurent, en quelque sorte, connectés pourrait en outre être défendue. Il semble néanmoins contre-intuitif de considérer des itinéraires servant au transport dans des eaux internationales comme des extensions [n.d.t. légitimes] d’éléments géopolitiques.</p>
<p>Une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code> peut donc occuper de nombreux volumes spatio-temporels disjoints tant qu’il n’y a pas de discontinuité dans l’intervalle temporel couvert par ces mêmes volumes spatio-temporels. Cela signifie qu’une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code> doit être continue dans le temps : si une <code class="language-plaintext highlighter-rouge">E4_Période</code> est terminée dans tous les espaces [n.d.t. qu’elle convoque], elle est terminée définitivement en tant que tout. Cela n’empêche cependant pas qu’une <code class="language-plaintext highlighter-rouge">E4_Période</code> soit terminée dans un espace avant de l’être dans un autre (comme ce fut le cas de la migration polynésienne), et que cette même <code class="language-plaintext highlighter-rouge">E4_Période</code> perdure aussi longtemps qu’elle s’incarne dans au moins un espace. </p>
<p>Le CIDOC CRM définit <code class="language-plaintext highlighter-rouge">E4_Période</code> comme une sous-classe de <code class="language-plaintext highlighter-rouge">E2_Entité_temporelle</code> ainsi que de <code class="language-plaintext highlighter-rouge">E92_Volume_spatio-temporel</code> – considéré comme un volume spatio-temporel tel que défini dans <a href="http://www.cidoc-crm.org/crmgeo/home-5"><span class="underline">CIDOC CRMgeo</span></a> (Doerr et Hiebel, 2013). Du fait de cet héritage multiple, l’étendue physique d’une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code> peut être discutée sans la représenter à chaque fois avec une instance de son volume spatio-temporel. Ce modèle [n.d.t. le CIDOC CRM] comprend deux types de choses bien différentes : une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code> est un phénomène alors qu’une instance de <code class="language-plaintext highlighter-rouge">E92_Volume_spatio-temporel</code> est une agrégation de points dans un espace-temps. Cependant, la réelle étendue spatio-temporelle d’une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code> est considérée comme unique en raison du flou et des nombreux détails qui la caractérisent; l’identité et l’existence de cette étendue spatio-temporelle se reposent donc uniquement sur l’identité de l’instance de <code class="language-plaintext highlighter-rouge">E4_Période</code>. Cet héritage multiple est donc effectif, dénué d'ambiguïté et correspond aux intuitions du langage naturel [n.d.t. c.-à-d. que, au quotidien, il n’est généralement pas question du volume spatio-temporel aux fins de simplification et de compréhension intuitive du monde; d’encapsuler <code class="language-plaintext highlighter-rouge">E92_Volume_spatio-temporel</code>  dans <code class="language-plaintext highlighter-rouge">E4_Période</code>  se rapproche de l’utilisation courante de ces concepts et en simplifie de ce fait l’utilisation]. </p>
<p>Un usage typique de cette classe dans le milieu patrimonial est celui de la documentation des périodes culturelles et artistiques. Le style artistique peut être conceptualisé de deux manières : selon un contexte historique ou selon des caractéristiques physiques. Par exemple, « l’Impressionnisme » peut être vu comme une période de la sphère d’influence européenne s’étendant approximativement de 1870 à 1905 durant laquelle des peintures ayant des caractéristiques spécifiques ont été produites par des artistes tels que Monet, Renoir, Pissarro, Sisley et Degas. Mais l’impressionnisme peut être considéré aussi comme un style désignant toute peinture qui partage les caractéristiques des œuvres produites par les peintres impressionnistes, indépendamment de tout contexte historique. La première interprétation [n.d.t. selon un contexte historique] est une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code> alors que la seconde [n.d.t. selon des caractéristiques physiques] définit une catégorie morphologique d’objet qui relève de la classe <code class="language-plaintext highlighter-rouge">E55_Type</code>. </p>
<p>Un élément géopolitique en tant que cas spécial d’une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code> est un ensemble d’activités et de phénomènes concernant une revendication du pouvoir, des conséquences de l’appartenance à une région juridique et un système administratif établissant un élément géopolitique. Des exemples modernes d’éléments géopolitiques étant des instances possibles de <code class="language-plaintext highlighter-rouge">E4_Période</code> sont des pays ou des régions administratives de pays tels que des districts, dont les structures et les actions définissent des activités et des phénomènes sur le territoire dont la gouvernance leur revient. Les frontières d’éléments géopolitiques sont souvent définies par des ententes contractuelles ou des traités qui peuvent néanmoins différer de l’usage réel qui est fait du territoire. Les propriétés spatio-temporelles d’éléments géopolitiques peuvent être modélisées grâce aux propriétés héritées de <code class="language-plaintext highlighter-rouge">E92_Volume_spatio-temporel</code>. </p>
<p>Un autre cas spécial d’une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code> est l’étendue réelle d’un ensemble d’activités et de phénomènes telle qu’elle est avérée par des traces physiques caractérisant l’occupation [n.d.t. sur un territoire], comme dans le cas de la période où la ville de Ninive était peuplée. </p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>Jurassic (Hallam, 1975)</p>
</li>
<li><p>Populated Period of Nineveh</p>
</li>
<li><p>Imperial Rome under Marcus Aurelius</p>
</li>
<li><p>European Bronze Age (Harrison, 2004) </p>
</li>
<li><p>Italian Renaissance (Macdonald, 1992)</p>
</li>
<li><p>Thirty Years War (Lee, 1991)</p>
</li>
<li><p>Sturm und Drang (Berkoff, 2013)</p>
</li>
<li><p>Cubism (Cox, 2000)</p>
</li>
<li><p>The Capital of Russia (E4) [the capital of Russia in the sense of an administrative unit moved in historical times from Moscow to St Petersburg and then back to Moscow. This exemplifies an administrative unit changing place over time without temporal discontinuity]</p>
</li>
<li><p>The settling activity of the community of Helsinki (a.k.a. Helsingfors) (E7) [the original settlement called Helsinki was located in the area of the modern airport. The community moved later to settle on the coast. This exemplifies a continued activity changing place over time without temporal discontinuity]</p>
</li>
<li><p>Bronze Age (E4) [Bronze Age, in the sense of technological adoption, spread over disjoint areas including islands such as the British Isles without temporal discontinuity]</p>
</li>
<li><p>Japan, the state (E4) [In 2021, the Japanese state as a political unit comprised in 6852 islands extending along the Pacific coast of Asia]</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>Le Jurassique (Hallam, 1975)</p>
</li>
<li><p>La période où Ninive était peuplée</p>
</li>
<li><p>L’Empire romain sous Marc Aurèle</p>
</li>
<li><p>L’Âge du bronze en Europe (Harrison, 2004)</p>
</li>
<li><p>La Renaissance italienne (Macdonald, 1992)</p>
</li>
<li><p>La guerre de Trente ans (Lee, 1991)</p>
</li>
<li><p>Le mouvement <em>Sturm und Drang</em> (Berkoff, 2013)</p>
</li>
<li><p>Le Cubisme (Cox, 2000)</p>
</li>
<li><p>La capitale de la Russie (<code class="language-plaintext highlighter-rouge">E4_Période</code>) [la capitale de la Russie dans le sens d'une unité administrative déplacée dans les temps historiques de Moscou à Saint-Pétersbourg, puis déplacée à nouveau à Moscou. Cela illustre une unité administrative changeant de lieu dans le temps sans discontinuité temporelle]</p>
</li>
<li><p>L'activité de colonisation de la communauté d'Helsinki (alias Helsingfors) (<code class="language-plaintext highlighter-rouge">E7_Activité</code>) [la colonie d'origine appelée Helsinki était située dans la zone de l'aéroport moderne. La communauté a déménagé plus tard pour s'installer sur la côte. Cela illustre une activité continue changeant de lieu dans le temps sans discontinuité temporelle]</p>
</li>
<li><p>L'âge du Bronze (<code class="language-plaintext highlighter-rouge">E4_Période</code>) [l'âge du Bronze, au sens de l'adoption technologique, s'étendant sur des zones disjointes comprenant des îles, telles que les Îles Britanniques, sans discontinuité temporelle]</p>
</li>
<li><p>Japon, l'État (<code class="language-plaintext highlighter-rouge">E4_Période</code>) [en 2021, l'État japonais en tant qu'unité politique comprise dans 6 852 îles s'étendant le long de la côte pacifique de l'Asie]</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>E4(x) ⇒ E2(x)</p>
<p>E4(x) ⇒ E92(x)</p>
</td>
<td>
<p>E4(x) ⇒ E2(x)</p>
<p>E4(x) ⇒ E92(x)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
<p>P7 took place at (witnessed): E53 Place</p>
<p>P8 took place on or within (witnessed): E18 Physical Thing</p>
<p>P9 consists of (forms part of): E4 Period</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">P7_a_eu_lieu_dans (a_été_témoin_de)</code> : <code class="language-plaintext highlighter-rouge">E53_Lieu</code></p>
<p><code class="language-plaintext highlighter-rouge">P8_a_eu_lieu (a_été_témoin_de)</code> :  <code class="language-plaintext highlighter-rouge">E18_Chose_matérielle</code></p>
<p><code class="language-plaintext highlighter-rouge">P9_comprend (fait partie de)</code> : <code class="language-plaintext highlighter-rouge">E4_Période</code></p>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
<p>Le terme « unit » a été traduit par « élément », car il est fait référence à une chose qui est complète en soi mais fait aussi partie d’un tout (ce qui est plus près de la définition d’élément) alors qu’unité en français signale davantage une nature indivisible et unique. C’est aussi cohérent avec les choix qui ont été faits lors de la traduction du nom des entités de CIDOC CRM (p. ex. <code class="language-plaintext highlighter-rouge">E79_Ajout_d’élément</code>, <code class="language-plaintext highlighter-rouge">E80_Retrait_d’Élément</code>).<code class="language-plaintext highlighter-rouge"></code></p>
<p>Le terme « extent » a été traduit par « étendue » après une brève revue des traductions les plus fréquentes dans le contexte d’une qualification spatio-temporelle. </p>
<p>Le terme « spread[ing] » a été traduit par « déploiement » d’une part, car il est plus près du sens phénoménal associé à l’original (le fait qu’un phénomène prenne de l’ampleur) et, d’autre part, afin de ne pas créer de confusion par l’usage répété du terme « étendue » pour refléter des sens différents. </p>
<p>Le terme « land use » a été traduit conformément à la traduction qu’en fait le gouvernement du Canada dans les textes se rapportant au droit autochtone. </p>
<p>Le terme « disconnected » a été traduit par « distinct » puisqu’il reflète davantage la nature désunifiée que « déconnecté », qui est davantage utilisé pour parler de communication. </p>
<p>Dans la phrase « Le style artistique peut être conceptualisé de deux manières : selon un contexte historique ou selon des caractéristiques physiques », l’ordre de présentation des conceptualisations a été inversé afin de refléter la structure du texte. </p>
<p>Dans la phrase « La première interprétation [n.d.t. selon des caractéristiques physiques] est une instance de <code class="language-plaintext highlighter-rouge">E4_Période</code> alors que la seconde [n.d.t. selon un contexte historique] définit une catégorie morphologique d’objet, une instance de <code class="language-plaintext highlighter-rouge">E55_Type</code> », le terme « type » a été remplacé par « catégorie » aux fins de clarification puisque c’est le sens entendu du terme dans la phrase originale. </p>
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p>CIDOC CRM. « CRMgeo ». Modèle, 2021.<a href="http://www.cidoc-crm.org/crmgeo/home-5"><span class="underline"> </span></a><a href="http://www.cidoc-crm.org/crmgeo/home-5"><span class="underline">http://www.cidoc-crm.org/crmgeo/home-5</span></a>.</p>
<p>Termium. « Land Use ». Dans <em>Termium Plus</em>. Ottawa, CA-ON: Gouvernement du Canada, 2022.<a href="https://www.btb.termiumplus.gc.ca/tpv2alpha/alpha-fra.html?lang=fra&i=1&srchtxt=land+use&index=alt&codom2nd_wet=1#resultrecs"><span class="underline"> </span></a><a href="https://www.btb.termiumplus.gc.ca/tpv2alpha/alpha-fra.html?lang=fra&i=1&srchtxt=land+use&index=alt&codom2nd_wet=1#resultrecs"><span class="underline">https://www.btb.termiumplus.gc.ca/tpv2alpha/alpha-fra.html?lang=fra&i=1&srchtxt=land+use&index=alt&codom2nd_wet=1#resultrecs</span></a>.</p>
</td>
</tr>
</tbody>
</table>
